Fix wishlist dropdown background color bleeding out of container

--- a/assets/scss/components/foundation/dropdown/_dropdown.scss
+++ b/assets/scss/components/foundation/dropdown/_dropdown.scss
@@ -66,7 +66,7 @@
 }
 
 #wishlist-dropdown.is-open {
-    background: white;
+    background: transparent;
     left: auto !important;
     max-width: none !important;
     width: 100% !important;
@@ -94,6 +94,7 @@
     }
 
     .button {
+        background-color: stencilColor("dropdown--wishList-backgroundColor");
         border-top-left-radius: 0px;
         border-top-right-radius: 0px;
         width: 100%;
